2020_spring-boot_게시판 만들기_CRUD_조회수_service_추가

--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -31,5 +31,5 @@
 </table>
 
 <button type="submit" onclick="location.href='/articles/{{articleId}}/edit'" class="btn btn-info btn-block">수정</button>
-
+<button type="submit" onclick="location.href='/articles'" class="btn btn-primary btn-block">목록으로</button>
 {{>layouts/footer}}
