--- a/src/main/resources/templates/articles/update.mustache
+++ b/src/main/resources/templates/articles/update.mustache
@@ -35,9 +35,9 @@
     </button>
 
 
-    <button type="submit" onclick="location.href='/articles'" class="btn btn-primary btn-block">
+    <a href="/articles" class="btn btn-primary btn-block">
         목록으로
-    </button>
+    </a>
     <a  href="/articles/{{articleId}}/delete" class="btn btn-danger btn-block">
         삭제
     </a>
