--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -32,4 +32,11 @@
 
 <button type="submit" onclick="location.href='/articles/{{articleId}}/edit'" class="btn btn-info btn-block">수정</button>
 <button type="submit" onclick="location.href='/articles'" class="btn btn-primary btn-block">목록으로</button>
+
+{{>comments/_comments}}
+
+
 {{>layouts/footer}}
+
+
+
