--- a/src/main/resources/templates/comments/_comments.mustache
+++ b/src/main/resources/templates/comments/_comments.mustache
@@ -1,12 +1,9 @@
 <div class="card">
     <div class="card-body">
-        <form class="container" method="post" action="/comments/{{articleId}}">
-          <div class="form-group">
-              <label>댓글 작성</label>
-              <textarea class="form-control" name="content" rows="3"></textarea>
-          </div>
-          <input type="hidden" name="author" value="홍팍">
-            <button type="submit" class="btn btn-primary">전송</button>
-        </form>
+        <!--댓글작성 -->
+        {{>comments/_form}}
+
+        <!-- 댓글 목록 -->
+        {{>comments/_list}}
     </div>
 </div>
